--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,90 +1,40 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lume - Página Inicial</title>
 {% extends "base.html" %}
+{% load static %}
+
 {% block title %}Lume - Página Inicial{% endblock %}
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    {% load static %}
-    <link rel="stylesheet" href="{% static '/index.css' %}" />
-</head>
-
-<body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-        <a class="navbar-brand" href="/">Lume</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link text-white" href="{% url 'index' %}">Home</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="{% url 'conteudo' %}">Conteúdo</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="metas.html">Metas e Check-in</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="{% url 'diario' %}">Diário</a></li>
-            </ul>
-        </div>
-    </nav>
-
 {% block content %}
-    <div class="container mt-5">
-        <div class="jumbotron text-center">
-            <h1 class="display-4">{{ frase }}</h1>
-            <p class="lead">Esta é a página inicial do Lume</p>
-            <p class="lead">Seja Bem Vindo(A)</p>
+<div class="container mt-5">
+  <div class="jumbotron text-center">
+    <h1 class="display-4">{{ frase }}</h1>
+    <p class="lead">Esta é a página inicial do Lume</p>
+    <p class="lead">Seja Bem Vindo(A)</p>
+  </div>
+</div>
+
+<div class="container my-5">
+  <div class="row justify-content-center text-center">
+    <div class="col-md-3 mb-4">
+      <a href="{% url 'metas' %}" style="text-decoration: none; color: inherit;">
+        <div class="card shadow">
+          <div class="card-body">
+            <h5>Metas e Check-in</h5>
+            <img src="https://img.icons8.com/ios/50/user-group-man-man.png" width="30" />
+          </div>
         </div>
+      </a>
     </div>
 
-    <main class="container my-5">
-        <div class="row justify-content-center text-center">
-            <div class="col-md-3 mb-4">
-                <a href="metas.html" style="text-decoration: none; color: inherit;"></a>
-                <div class="card shadow">
-                    <div class="card-body">
-                        <h5>Metas e Check-in</h5>
-                        <img src="https://img.icons8.com/ios/50/user-group-man-man.png" width="30" />
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 mb-4">
-                <div class="card shadow">
-                    <div class="card-body">
-                        <h5>Diário Pessoal</h5>
-                        <img src="https://img.icons8.com/ios/50/pencil--v1.png" width="30" />
-                    </div>
-                </div>
-            </div>
+    <div class="col-md-3 mb-4">
+      <a href="{% url 'diario' %}" style="text-decoration: none; color: inherit;">
+        <div class="card shadow">
+          <div class="card-body">
+            <h5>Diário Pessoal</h5>
+            <img src="https://img.icons8.com/ios/50/pencil--v1.png" width="30" />
+          </div>
         </div>
-    </main>
-
-
-    <footer class="text-center py-4 mt-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3"><strong>Lume</strong><br>© 2025 Lume</div>
-                <div class="col-md-3"><strong>Redes</strong><br>
-                    <img src="https://img.icons8.com/ios/50/instagram-new--v1.png" width="25" />
-                    <img src="https://img.icons8.com/ios/50/twitter--v1.png" width="25" />
-                </div>
-                <div class="col-md-3"><strong>Contate-nos</strong><br>
-                    <img src="https://img.icons8.com/ios/50/phone.png" width="25" />
-                    <img src="https://img.icons8.com/ios/50/new-post.png" width="25" />
-                </div>
-            </div>
-        </div>
+      </a>
+    </div>
+  </div>
+</div>
 {% endblock %}
-    </footer>
-
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-
-</html>
