--- a/app/templates/editar_diario.html
+++ b/app/templates/editar_diario.html
@@ -1,13 +1,13 @@
 {% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar Registro</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         body {
             background-color: #f8f9fa;
@@ -50,25 +50,26 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div class="container-box">
-           <ul class="navbar-nav">
+            <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'index' %}">Home</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'conteudo' %}">Conteúdo</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'metas' %}">Metas e Check-in</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'diario' %}">Diário</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="{% url 'login' %}">Login</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="{% url 'auth' %}">Login</a></li>
             </ul>
 
             <h2>Editar Registro do Diário</h2>
 
             {% if messages %}
-                <ul class="messages">
-                    {% for message in messages %}
-                        <li class="alert alert-{{ message.tags }}">{{ message }}</li>
-                    {% endfor %}
-                </ul>
+            <ul class="messages">
+                {% for message in messages %}
+                <li class="alert alert-{{ message.tags }}">{{ message }}</li>
+                {% endfor %}
+            </ul>
             {% endif %}
 
             <form method="post">
@@ -82,4 +83,5 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
