--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,24 @@
         <li class="nav-item"><a class="nav-link text-white" href="{% url 'conteudo' %}">Conteúdo</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="{% url 'metas' %}">Metas e Check-in</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="{% url 'diario' %}">Diário</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="{% url 'logout' %}">Sair</a></li>
+        <li class="nav-item">
+          <form method="post" action="{% url 'logout' %}" class="m-0 p-0">
+            {% csrf_token %}
+            <a href="#" class="nav-link text-white"
+               onclick="this.closest('form').submit(); return false;">
+              Sair
+            </a>
+          </form>
+
+        </li>
+        
+        
+        
+         
+        
+        
+
+
         {% else %}
         <li class="nav-item"><a class="nav-link text-white" href="{% url 'index' %}">Home</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="{% url 'conteudo' %}">Conteúdo</a></li>
