--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,6 +39,18 @@
       </a>
     </div>
 
+    <div class="col-md-3 mb-4">
+      <a href="{% url 'conteudo' %}"
+        style="text-decoration:none;color:inherit;">
+        <div class="card shadow">
+          <div class="card-body">
+            <h5>Conteúdo educativo</h5>
+            <img src="https://img.icons8.com/?size=100&id=53377&format=png&color=000000" width="30" />
+          </div>
+        </div>
+      </a>
+    </div>
+
   </div>
 </div>
 {% endblock %}
