--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,13 +6,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>{% block title %}Lume{% endblock %}</title>
-
+  <link rel="shortcut icon" href="https://img.icons8.com/?size=100&id=ly9VoAN2tdSB&format=png&color=000000" type="image/x-icon">
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
   <!-- CSS global -->
   <link rel="stylesheet" href="{% static 'css/index.css' %}">
-  <link rel="stylesheet" href="{% static 'css/metas.css' %}">
+  <link rel="stylesheet" href="{% static 'css/metas_usuario.css' %}">
 
   {% block extra_css %}{% endblock %}
 </head>
