--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -3,7 +3,8 @@
 body {
   margin: 0; padding: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(to right, #e6fff2, #d9f2e6);
+  background-image: none !important;
+  background: linear-gradient(to right, #e6fff2, #d9f2e6) !important;
   height: 100vh; display: flex; align-items: center; justify-content: center;
 }
 
